--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "lcdemo",
     "str_demo",
     "graphics_demo",
-    "dounle_ptr",
+    "double_ptr",
     "dfs_and_bfs",
     "cache",
 ]
