--- a/c_leetcode/.gitignore
+++ b/c_leetcode/.gitignore
@@ -1,5 +1,8 @@
-CMakeFiles
 build
+array_pra/build
+str_pra/build
+str_pra/CMakeFiles
+cmake-build-debug
 build.ninja
 cmake_install.cmake
 CMakeCache.txt
