--- a/c_leetcode/CMakeLists.txt
+++ b/c_leetcode/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.21)
-project(c_leetcode)
+cmake_minimum_required(VERSION 3.5)
 
-set(CMAKE_CXX_STANDARD 23)
+project(lc)
+set(CMAKE_CXX_STANDARD 20)
 
-add_executable(c_leetcode main.cpp str_pra/strtest1.cpp str_pra/strtest1.h design/degisn1.cpp design/degisn1.h arr_pra/arr_ra.cpp arr_pra/arr_ra.h tree_pra/tree_pra.cpp tree_pra/tree_pra.h sdudy_pra/study_pra.cpp sdudy_pra/study_pra.h)
+add_executable(${PROJECT_NAME} main.cpp)
