--- a/c_leetcode/.gitignore
+++ b/c_leetcode/.gitignore
@@ -3,12 +3,16 @@ array_pra/build
 str_pra/build
 str_pra/CMakeFiles
 cmake-build-debug
+.cmake
+CMakeFiles
+lc
+src/build
+src/build.ninja
+src/cmake_install.cmake
+src/CMakeCache.txt
+src/CMakeFiles
+src/.cmake
+compile_commands.json
 build.ninja
 cmake_install.cmake
 CMakeCache.txt
-.cmake
-CMakeFiles
-stack_pra/build
-.ninja_log
-.ninja_deps
-lc
