128. 最长连续序列

--- a/c_leetcode/CMakeLists.txt
+++ b/c_leetcode/CMakeLists.txt
@@ -59,4 +59,5 @@ add_subdirectory(src/dp_pra)
 add_subdirectory(src/stack_pra)
 add_subdirectory(src/str_pra)
 add_subdirectory(src/list_pra)
+add_subdirectory(src/arr_pra)
 add_subdirectory(src/test)
