2859. 计算 K 置位下标对应元素的和

--- a/c_leetcode/CMakeLists.txt
+++ b/c_leetcode/CMakeLists.txt
@@ -70,4 +70,5 @@ add_subdirectory(src/stack_pra)
 add_subdirectory(src/str_pra)
 add_subdirectory(src/list_pra)
 add_subdirectory(src/arr_pra)
+add_subdirectory(src/binary_pra)
 add_subdirectory(src/test)
