--- a/c_leetcode/CMakeLists.txt
+++ b/c_leetcode/CMakeLists.txt
@@ -72,4 +72,5 @@ add_subdirectory(src/list_pra)
 add_subdirectory(src/arr_pra)
 add_subdirectory(src/binary_pra)
 add_subdirectory(src/math_pra)
+add_subdirectory(src/mid_pra)
 add_subdirectory(src/test)
