--- a/c_leetcode/src/deque_pra/CMakeLists.txt
+++ b/c_leetcode/src/deque_pra/CMakeLists.txt
@@ -1,6 +1,6 @@
-file(GLOB_RECURSE sources ${CMAKE_SOURCE_DIR}/src/queue_pra/*.cpp)
+file(GLOB_RECURSE sources ${CMAKE_SOURCE_DIR}/src/deque_pra/*.cpp)
 
 include_directories(${LC_INCLUDE_DIR})
 
-add_library(binary_pra STATIC
+add_library(deque_pra STATIC
         ${sources})
