--- a/c_leetcode/CMakeLists.txt
+++ b/c_leetcode/CMakeLists.txt
@@ -74,4 +74,5 @@ add_subdirectory(src/binary_pra)
 add_subdirectory(src/math_pra)
 add_subdirectory(src/mid_pra)
 add_subdirectory(src/deque_pra)
+add_subdirectory(src/greedy_pra)
 add_subdirectory(src/test)
