94. 二叉树的中序遍历

--- a/c_leetcode/CMakeLists.txt
+++ b/c_leetcode/CMakeLists.txt
@@ -75,4 +75,5 @@ add_subdirectory(src/math_pra)
 add_subdirectory(src/mid_pra)
 add_subdirectory(src/deque_pra)
 add_subdirectory(src/greedy_pra)
+add_subdirectory(src/tree_pra)
 add_subdirectory(src/test)
