--- a/c_leetcode/CMakeLists.txt
+++ b/c_leetcode/CMakeLists.txt
@@ -76,4 +76,5 @@ add_subdirectory(src/mid_pra)
 add_subdirectory(src/deque_pra)
 add_subdirectory(src/greedy_pra)
 add_subdirectory(src/tree_pra)
+add_subdirectory(src/simulation_pra)
 add_subdirectory(src/test)
