2101. 引爆最多的炸弹

--- a/c_leetcode/CMakeLists.txt
+++ b/c_leetcode/CMakeLists.txt
@@ -77,4 +77,6 @@ add_subdirectory(src/deque_pra)
 add_subdirectory(src/greedy_pra)
 add_subdirectory(src/tree_pra)
 add_subdirectory(src/simulation_pra)
+add_subdirectory(src/floyd_pra)
 add_subdirectory(src/test)
+
